--- a/flexbox.html
+++ b/flexbox.html
@@ -2,23 +2,27 @@
 
 <html>
     <head>
-        <title>Flex </title>
-        <link rel="stylesheet" href="flexbox.css">
+        <title>Flexbox</title>
     </head>
-    <header>Headline.</header>
-        <ul class="social-links">
-            <li><a href="https://www.linkgroup.com/about-us.html"></a><span> About Us</span></li>
-            <li> <a href="https://www.linkgroup.com/about-us.html"></a><span>Our Service</span></li> 
-            <li><a href="https://www.linkgroup.com/about-us.html"></a><span>Blog</span></li> 
-            <li> <a href="https://www.linkgroup.com/about-us.html"></a><span>Contact</span></li>
-        </ul> 
-        <h3>We collect and curate articles,opinions and images from around the world</h3>
     <body>
 
-    <main> <br>
-        <h2>The Bottom Line</h2>
-        <p>We deliver the news that is relevant to you</p>
-        <div class="container">
+        <header>
+            <h3>Headlines</h3>
+            <link rel="stylesheet" href="flexbox.css">
+            <nav>
+                <ul class="social-links">
+                    <li><a href="https://www.linkgroup.com/about-us.html"></a><span> About Us</span></li>
+                    <li> <a href="https://www.linkgroup.com/about-us.html"></a><span>Our Service</span></li> 
+                    <li><a href="https://www.linkgroup.com/about-us.html"></a><span>Blog</span></li> 
+                    <li> <a href="https://www.linkgroup.com/about-us.html"></a><span>Contact</span></li>
+                </ul>
+            </nav>
+            <h4>We <span>collect and curate</span> articles,opinions and images from around the world</h4>
+        </header>
+        <main> <br>
+            <h2>The Bottom Line</h2>
+            <p>We deliver the news that is relevant to you</p>
+            <div class="container">
             <div>Our Expertise.</div>
             <div class="flex-container">
                 <div class="one"> 
